k8s/music2score_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: music2score
  labels:
    name: music2score
