k8s/apache_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-server
  namespace: music2score
  labels:
    tier: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-server
      tier: webapp
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 2
        maxUnavailable: 0
  template:
    metadata:
      labels:
        app: apache-server
        tier: webapp
    spec:
      hostname: apache-server
      containers:
      - image: muditsingh13/music2score:apache_server
        name: apache-server
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html/
          name: apache-server-git-storage0
          subPath: "pages"
        - mountPath: /usr/local/etc/php/
          name: apache-server-git-storage1
          subPath: "php_config"
        - mountPath: /var/www/html/uploads/
          name: apache-server-claim-storage2
      volumes:
      - name: apache-server-git-storage0
        emptyDir: {}
      - name: apache-server-git-storage1
        emptyDir: {}
      - name: apache-server-claim-storage2
        persistentVolumeClaim:
          claimName: apache-server-claim0
      restartPolicy: Always
status: {}
