k8s/mysql_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-server
  namespace: music2score
  labels:
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-server
      tier: database
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 2
        maxUnavailable: 0
  template:
    metadata:
      labels:
        app: mysql-server
        tier: database
    spec:
      hostname: mysql-server
      containers:
      - args:
          - --default-authentication-plugin=mysql_native_password
          - --init-file=/tmp/database/schema.sql
        image: mysql:8.0.23
        name: mysql-server
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /tmp/database/
          name: mysql-server-git-storage0
          subPath: "mysql/production"
        - mountPath: /var/lib/mysql/
          name: mysql-server-claim-storage1
      volumes:
      - name: mysql-server-git-storage0
        emptyDir: {}
      - name: mysql-server-claim-storage1
        persistentVolumeClaim:
          claimName: mysql-server-claim0
      restartPolicy: Always
status: {}
