k8s/apache_server_service.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-server
  namespace: music2score
spec:
  type: ClusterIP
  selector:
    tier: webapp
  ports:
  - name: default
    protocol: TCP
    port: 80
    targetPort: 80
