k8s/mysql_server_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-server
  namespace: music2score
spec:
  type: ClusterIP
  ports:
  - name: default
    protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    tier: database
